# open-llm-invoke

./: .gitignore  README.md  pyproject.toml
engines/llm/: llm_schema.py  openai_llm_invoke.py
engines/llm/prompts/static/: common_prompt_template.py
engines/tools/: tool_schema.py
engines/tools/tool_functions/: __init__.py  web_search.py
engines/tools/tool_services/: tool_wrapper.py  web_search_factory.py
engines/tools/tool_services/web_search/: base_search.py  schemas.py  serper_google_search.py  zhipu_search.py
tests/: test_llm_invoke.py  test_tools.py
utils/: base_enum.py  commons.py  get_dict.py
